# Chess-Study

./: .gitignore  Analysis Functions.py  Attempt to run it with Move Quality.py  Game-Analysis.py  General Game Populace Analysis.py  Helper Functions  Initial_Analysis.R  Main Elocator Functionality.ipynb  Main.ipynb  Main_with_Elocator_Test.ipynb  README.md  Test_processing  [1] config.py  [2] Game Definitions.py  [4] Game Fetch & Move Data.py  [5] Game-processing.py  clean_requirements.txt  combination ting.py  data_scraping_and_processing  for chrissy chriss.py  game analysis trial.py  history.py  main.py  plot_generation_&_statistical_analysis.R  publication_fixes.py  requirements.txt  set_git_config.py  updated_adhd_usernames.py  updated_usernames.py
History/: Original Full Working File.py  history_internal.py  requirements.txt
R analysis/1:14:25/: Begining_proper_statistical_analysis.R  Initial_Analysis.R  Wilcox_test_game_counts_troubleshooting.R  time_spent_x_move_number.R
R analysis/1:14:25 Plots/: cumulative_time_usage.R  time_spent_x_move_number.R
R analysis/1:14:25/time_spent_analysis/: statistical_tests_time_complexity.R  (+1 more)
R analysis/1:16:25/: results_table_linear_regression  timexcomplexity_linear_regression.R
Setup/: Helper Functions  config.py
elocator_test/: README.md  __init__.py  conversation_log.txt  download_model.py  elocator_api.py  encoder.py  model.py  pyproject.toml  test_encoder.py  test_integration.py  test_model.py
elocator_test/complexity/: model.py
elocator_test/elocator_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1 files in other folders)
